Add JC IT SERVICES credit link

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 
   <footer class="footer">
     <p>G-Spot — The Largest Alter Community on Telegram.</p>
+    <p class="credit">Built by <a href="https://jcitservices-ai.github.io/itservices/index.html" target="_blank" rel="noreferrer">JC IT SERVICES</a>.</p>
   </footer>
 
   <script src="script.js"></script>
