--- a/partners.html
+++ b/partners.html
@@ -125,6 +125,7 @@
 
   <footer class="footer">
     <p>G-Spot — Partnerships that amplify community.</p>
+    <p class="credit">Built by <a href="https://jcitservices-ai.github.io/itservices/index.html" target="_blank" rel="noreferrer">JC IT SERVICES</a>.</p>
   </footer>
 
   <script src="script.js"></script>
