Match Grindr-inspired layout and add imagery

--- a/about.html
+++ b/about.html
@@ -6,106 +6,120 @@
   <title>G-Spot | About & Community</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Sora:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div class="grain"></div>
-  <header class="topbar">
-    <div class="logo">G-Spot</div>
-    <nav class="nav">
-      <a class="nav-link" href="index.html">Home</a>
-      <a class="nav-link active" href="about.html">About & Community</a>
-      <a class="nav-link" href="partners.html">Partnerships & Contact</a>
-    </nav>
-    <button class="nav-toggle" aria-label="Open menu">
-      <span></span><span></span><span></span>
-    </button>
-  </header>
+  <div class="layout">
+    <aside class="sidebar">
+      <div class="brand">
+        <img class="brand-logo" src="assets/gspot-logo.png" alt="G-Spot logo" />
+        <span class="brand-text">G-Spot</span>
+      </div>
+      <nav class="side-nav">
+        <a class="side-link" href="index.html">Home</a>
+        <a class="side-link active" href="about.html">About & Community</a>
+        <a class="side-link" href="partners.html">Partnerships & Contact</a>
+      </nav>
+      <div class="side-meta">
+        <p>Organized. Discrete. Connected.</p>
+        <a class="btn primary" href="https://t.me/gspot_adminbot" target="_blank" rel="noreferrer">Connect</a>
+      </div>
+    </aside>
 
-  <main>
-    <section class="hero alt">
-      <div class="hero-text">
-        <p class="eyebrow">About G-Spot</p>
-        <h1>About & Community</h1>
-        <p class="lead">
-          Founded as a Telegram-based alter community, G-Spot has grown into a multi-channel ecosystem connecting over 200,000 members nationwide.
-          Our mission is to provide an organized and active platform for adults seeking community-driven social experiences.
-        </p>
-        <p class="lead">We specialize in facilitating adult social activities and gatherings while maintaining structure, discretion, and responsible coordination.</p>
-      </div>
-      <div class="hero-card" aria-hidden="true">
-        <div class="shine"></div>
-        <div class="card-content">
-          <div class="stat">Structured<span>Community Guidelines</span></div>
-          <div class="stat">Discrete<span>Responsible Coordination</span></div>
-          <div class="stat">Engaged<span>Nationwide Members</span></div>
-          <div class="stat">Focused<span>Social Experiences</span></div>
-        </div>
-      </div>
-    </section>
+    <div class="content">
+      <header class="top-rail">
+        <span class="badge">Community</span>
+        <p>Over 200,000 members nationwide.</p>
+        <button class="nav-toggle" aria-label="Open menu">
+          <span></span><span></span><span></span>
+        </button>
+      </header>
 
-    <section class="section">
-      <div class="section-head">
-        <h2>Our Community Structure</h2>
-        <p>G-Spot operates through multiple channels to keep everything organized, clear, and responsive.</p>
-      </div>
-      <div class="card-grid">
-        <article class="info-card">
-          <h3>Main Telegram groups</h3>
-          <p>Our primary community spaces for active engagement and announcements.</p>
-        </article>
-        <article class="info-card">
-          <h3>Associate channels</h3>
-          <p>Targeted channels for updates, promotions, and curated content.</p>
-        </article>
-        <article class="info-card">
-          <h3>Event-based subgroups</h3>
-          <p>Smaller communities for event coordination and participation.</p>
-        </article>
-        <article class="info-card">
-          <h3>Partner brand integrations</h3>
-          <p>Collaborations that extend value to members and partners alike.</p>
-        </article>
-      </div>
-      <p class="section-foot">Our admins ensure that community guidelines are followed and that interactions remain organized and respectful.</p>
-    </section>
+      <main>
+        <section class="hero split">
+          <div class="hero-text">
+            <p class="eyebrow">About G-Spot</p>
+            <h1>About & Community</h1>
+            <p class="lead">
+              Founded as a Telegram-based alter community, G-Spot has grown into a multi-channel ecosystem connecting over 200,000 members nationwide.
+              Our mission is to provide an organized and active platform for adults seeking community-driven social experiences.
+            </p>
+            <p class="lead">We specialize in facilitating adult social activities and gatherings while maintaining structure, discretion, and responsible coordination.</p>
+          </div>
+          <div class="hero-media">
+            <img src="assets/about-1.jpg" alt="Two Asian men enjoying a night out" loading="lazy" />
+            <div class="hero-overlay">
+              <div class="stat">Structured<span>Community Guidelines</span></div>
+              <div class="stat">Engaged<span>Nationwide Members</span></div>
+            </div>
+          </div>
+        </section>
 
-    <section class="section dark-panel">
-      <div class="section-head">
-        <h2>Monthly Gatherings</h2>
-        <p>Every month, G-Spot organizes exclusive social gatherings for members.</p>
-      </div>
-      <div class="timeline">
-        <div class="timeline-step">
-          <span class="step-title">Plan</span>
-          <p>Events are curated to reflect community interests and partner collaborations.</p>
-        </div>
-        <div class="timeline-step">
-          <span class="step-title">Coordinate</span>
-          <p>Details and participation guidelines are announced through official channels.</p>
-        </div>
-        <div class="timeline-step">
-          <span class="step-title">Experience</span>
-          <p>Members join a controlled, private setting designed for engaging social experiences.</p>
-        </div>
-      </div>
-      <p class="section-foot">Event details, schedules, and participation guidelines are announced through official channels.</p>
-    </section>
+        <section class="section">
+          <div class="section-head">
+            <h2>Our Community Structure</h2>
+            <p>G-Spot operates through multiple channels to keep everything organized, clear, and responsive.</p>
+          </div>
+          <div class="card-grid">
+            <article class="info-card">
+              <h3>Main Telegram groups</h3>
+              <p>Our primary community spaces for active engagement and announcements.</p>
+            </article>
+            <article class="info-card">
+              <h3>Associate channels</h3>
+              <p>Targeted channels for updates, promotions, and curated content.</p>
+            </article>
+            <article class="info-card">
+              <h3>Event-based subgroups</h3>
+              <p>Smaller communities for event coordination and participation.</p>
+            </article>
+            <article class="info-card">
+              <h3>Partner brand integrations</h3>
+              <p>Collaborations that extend value to members and partners alike.</p>
+            </article>
+          </div>
+          <p class="section-foot">Our admins ensure that community guidelines are followed and that interactions remain organized and respectful.</p>
+        </section>
 
-    <section class="section cta-section">
-      <div>
-        <h2>Be Part of the Community</h2>
-        <p>Step into a structured, active network built for connection and engagement.</p>
-      </div>
-      <a class="btn primary" href="https://t.me/gspot_adminbot" target="_blank" rel="noreferrer">Connect on Telegram</a>
-    </section>
-  </main>
+        <section class="section dark-panel">
+          <div class="section-head">
+            <h2>Monthly Gatherings</h2>
+            <p>Every month, G-Spot organizes exclusive social gatherings for members.</p>
+          </div>
+          <div class="timeline">
+            <div class="timeline-step">
+              <span class="step-title">Plan</span>
+              <p>Events are curated to reflect community interests and partner collaborations.</p>
+            </div>
+            <div class="timeline-step">
+              <span class="step-title">Coordinate</span>
+              <p>Details and participation guidelines are announced through official channels.</p>
+            </div>
+            <div class="timeline-step">
+              <span class="step-title">Experience</span>
+              <p>Members join a controlled, private setting designed for engaging social experiences.</p>
+            </div>
+          </div>
+          <p class="section-foot">Event details, schedules, and participation guidelines are announced through official channels.</p>
+        </section>
 
-  <footer class="footer">
-    <p>G-Spot — Organized. Discrete. Connected.</p>
-    <p class="credit">Built by <a href="https://jcitservices-ai.github.io/itservices/index.html" target="_blank" rel="noreferrer">JC IT SERVICES</a>.</p>
-  </footer>
+        <section class="section cta-section">
+          <div>
+            <h2>Be Part of the Community</h2>
+            <p>Step into a structured, active network built for connection and engagement.</p>
+          </div>
+          <a class="btn primary" href="https://t.me/gspot_adminbot" target="_blank" rel="noreferrer">Connect on Telegram</a>
+        </section>
+      </main>
+
+      <footer class="footer">
+        <p>G-Spot — Organized. Discrete. Connected.</p>
+        <p class="credit">Built by <a href="https://jcitservices-ai.github.io/itservices/index.html" target="_blank" rel="noreferrer">JC IT SERVICES</a>.</p>
+      </footer>
+    </div>
+  </div>
 
   <script src="script.js"></script>
 </body>
