--- a/index.html
+++ b/index.html
@@ -6,104 +6,118 @@
   <title>G-Spot | Home</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Sora:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div class="grain"></div>
-  <header class="topbar">
-    <div class="logo">G-Spot</div>
-    <nav class="nav">
-      <a class="nav-link active" href="index.html">Home</a>
-      <a class="nav-link" href="about.html">About & Community</a>
-      <a class="nav-link" href="partners.html">Partnerships & Contact</a>
-    </nav>
-    <button class="nav-toggle" aria-label="Open menu">
-      <span></span><span></span><span></span>
-    </button>
-  </header>
+  <div class="layout">
+    <aside class="sidebar">
+      <div class="brand">
+        <img class="brand-logo" src="assets/gspot-logo.png" alt="G-Spot logo" />
+        <span class="brand-text">G-Spot</span>
+      </div>
+      <nav class="side-nav">
+        <a class="side-link active" href="index.html">Home</a>
+        <a class="side-link" href="about.html">About & Community</a>
+        <a class="side-link" href="partners.html">Partnerships & Contact</a>
+      </nav>
+      <div class="side-meta">
+        <p>The Largest Alter Community on Telegram</p>
+        <a class="btn primary" href="https://t.me/gspot_adminbot" target="_blank" rel="noreferrer">Join on Telegram</a>
+      </div>
+    </aside>
 
-  <main>
-    <section class="hero">
-      <div class="hero-text">
-        <p class="eyebrow">The Largest Alter Community on Telegram</p>
-        <h1>G-Spot</h1>
-        <p class="lead">
-          G-Spot is a fast-growing Telegram-based community with over 200,000 members across our groups and channel associates.
-          We are a dynamic adult social platform built around connection, lifestyle experiences, and curated gatherings for like-minded individuals.
-        </p>
-        <p class="lead">
-          We create spaces where members can interact, network, and participate in organized monthly events within a structured and well-managed environment.
-        </p>
-        <div class="cta-row">
-          <a class="btn primary" href="https://t.me/gspot_adminbot" target="_blank" rel="noreferrer">Join on Telegram</a>
-          <a class="btn ghost" href="partners.html">Collaborate With Us</a>
-        </div>
-      </div>
-      <div class="hero-card" aria-hidden="true">
-        <div class="shine"></div>
-        <div class="card-content">
-          <div class="stat">200K+<span>Active Community Reach</span></div>
-          <div class="stat">Monthly<span>Exclusive Gatherings</span></div>
-          <div class="stat">Trusted<span>Partner Brands</span></div>
-          <div class="stat">24/7<span>Admin Support</span></div>
-        </div>
-      </div>
-    </section>
+    <div class="content">
+      <header class="top-rail">
+        <span class="badge">New</span>
+        <p>Try G-Spot on the Web — no download required.</p>
+        <button class="nav-toggle" aria-label="Open menu">
+          <span></span><span></span><span></span>
+        </button>
+      </header>
 
-    <section class="section">
-      <div class="section-head">
-        <h2>Why G-Spot?</h2>
-        <p>G-Spot is more than a group. It is a connected community built on shared interests and organized engagement.</p>
-      </div>
-      <div class="card-grid">
-        <article class="info-card">
-          <h3>200K+ active community reach</h3>
-          <p>Our Telegram ecosystem connects a massive, engaged audience across curated groups and channels.</p>
-        </article>
-        <article class="info-card">
-          <h3>Established Telegram network ecosystem</h3>
-          <p>Reliable structure for announcements, events, and partner integrations.</p>
-        </article>
-        <article class="info-card">
-          <h3>Monthly exclusive gatherings</h3>
-          <p>Consistent, well-managed events that keep the community active and connected.</p>
-        </article>
-        <article class="info-card">
-          <h3>Trusted partner brands</h3>
-          <p>Collaborations that deliver value, visibility, and lifestyle alignment.</p>
-        </article>
-      </div>
-    </section>
+      <main>
+        <section class="hero split">
+          <div class="hero-text">
+            <p class="eyebrow">The Largest Alter Community on Telegram</p>
+            <h1>G-Spot</h1>
+            <p class="lead">
+              G-Spot is a fast-growing Telegram-based community with over 200,000 members across our groups and channel associates.
+              We are a dynamic adult social platform built around connection, lifestyle experiences, and curated gatherings for like-minded individuals.
+            </p>
+            <p class="lead">
+              We create spaces where members can interact, network, and participate in organized monthly events within a structured and well-managed environment.
+            </p>
+            <div class="cta-row">
+              <a class="btn primary" href="https://t.me/gspot_adminbot" target="_blank" rel="noreferrer">Join on Telegram</a>
+              <a class="btn ghost" href="partners.html">Collaborate With Us</a>
+            </div>
+          </div>
+          <div class="hero-media">
+            <img src="assets/hero-1.jpg" alt="Two Asian men smiling while holding a laptop" loading="lazy" />
+            <div class="hero-overlay">
+              <div class="stat">200K+<span>Active Community Reach</span></div>
+              <div class="stat">Monthly<span>Exclusive Gatherings</span></div>
+            </div>
+          </div>
+        </section>
 
-    <section class="section dark-panel">
-      <div class="section-head">
-        <h2>Our Trusted Partners</h2>
-        <p>We proudly collaborate with brands that support our community lifestyle.</p>
-      </div>
-      <div class="partner-grid">
-        <div class="partner">Pinoy Poppers</div>
-        <div class="partner">Delulubes</div>
-        <div class="partner">Browax Waxing Solutions</div>
-        <div class="partner">D’mansion Bathouse</div>
-        <div class="partner">Delulubes</div>
-      </div>
-      <p class="section-foot">Through these partnerships, we ensure members gain access to quality products, services, and venues aligned with our network’s interests.</p>
-    </section>
+        <section class="section">
+          <div class="section-head">
+            <h2>Why G-Spot?</h2>
+            <p>G-Spot is more than a group. It is a connected community built on shared interests and organized engagement.</p>
+          </div>
+          <div class="card-grid">
+            <article class="info-card">
+              <h3>200K+ active community reach</h3>
+              <p>Our Telegram ecosystem connects a massive, engaged audience across curated groups and channels.</p>
+            </article>
+            <article class="info-card">
+              <h3>Established Telegram network ecosystem</h3>
+              <p>Reliable structure for announcements, events, and partner integrations.</p>
+            </article>
+            <article class="info-card">
+              <h3>Monthly exclusive gatherings</h3>
+              <p>Consistent, well-managed events that keep the community active and connected.</p>
+            </article>
+            <article class="info-card">
+              <h3>Trusted partner brands</h3>
+              <p>Collaborations that deliver value, visibility, and lifestyle alignment.</p>
+            </article>
+          </div>
+        </section>
 
-    <section class="section cta-section">
-      <div>
-        <h2>Get Connected</h2>
-        <p>Join our growing community or reach out for collaboration opportunities.</p>
-      </div>
-      <a class="btn primary" href="https://t.me/gspot_adminbot" target="_blank" rel="noreferrer">Telegram Admin</a>
-    </section>
-  </main>
+        <section class="section dark-panel">
+          <div class="section-head">
+            <h2>Our Trusted Partners</h2>
+            <p>We proudly collaborate with brands that support our community lifestyle.</p>
+          </div>
+          <div class="partner-grid">
+            <div class="partner">Pinoy Poppers</div>
+            <div class="partner">Delulubes</div>
+            <div class="partner">Browax Waxing Solutions</div>
+            <div class="partner">D’mansion Bathouse</div>
+            <div class="partner">Delulubes</div>
+          </div>
+          <p class="section-foot">Through these partnerships, we ensure members gain access to quality products, services, and venues aligned with our network’s interests.</p>
+        </section>
 
-  <footer class="footer">
-    <p>G-Spot — The Largest Alter Community on Telegram.</p>
-    <p class="credit">Built by <a href="https://jcitservices-ai.github.io/itservices/index.html" target="_blank" rel="noreferrer">JC IT SERVICES</a>.</p>
-  </footer>
+        <section class="section cta-section">
+          <div>
+            <h2>Get Connected</h2>
+            <p>Join our growing community or reach out for collaboration opportunities.</p>
+          </div>
+          <a class="btn primary" href="https://t.me/gspot_adminbot" target="_blank" rel="noreferrer">Telegram Admin</a>
+        </section>
+      </main>
+
+      <footer class="footer">
+        <p>G-Spot — The Largest Alter Community on Telegram.</p>
+        <p class="credit">Built by <a href="https://jcitservices-ai.github.io/itservices/index.html" target="_blank" rel="noreferrer">JC IT SERVICES</a>.</p>
+      </footer>
+    </div>
+  </div>
 
   <script src="script.js"></script>
 </body>
