--- a/partners.html
+++ b/partners.html
@@ -6,127 +6,141 @@
   <title>G-Spot | Partnerships & Contact</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Sora:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div class="grain"></div>
-  <header class="topbar">
-    <div class="logo">G-Spot</div>
-    <nav class="nav">
-      <a class="nav-link" href="index.html">Home</a>
-      <a class="nav-link" href="about.html">About & Community</a>
-      <a class="nav-link active" href="partners.html">Partnerships & Contact</a>
-    </nav>
-    <button class="nav-toggle" aria-label="Open menu">
-      <span></span><span></span><span></span>
-    </button>
-  </header>
+  <div class="layout">
+    <aside class="sidebar">
+      <div class="brand">
+        <img class="brand-logo" src="assets/gspot-logo.png" alt="G-Spot logo" />
+        <span class="brand-text">G-Spot</span>
+      </div>
+      <nav class="side-nav">
+        <a class="side-link" href="index.html">Home</a>
+        <a class="side-link" href="about.html">About & Community</a>
+        <a class="side-link active" href="partners.html">Partnerships & Contact</a>
+      </nav>
+      <div class="side-meta">
+        <p>Partner with a 200K+ community.</p>
+        <a class="btn primary" href="https://t.me/gspot_adminbot" target="_blank" rel="noreferrer">Start a Partnership</a>
+      </div>
+    </aside>
 
-  <main>
-    <section class="hero alt">
-      <div class="hero-text">
-        <p class="eyebrow">Partner With G-Spot</p>
-        <h1>Partnerships & Contact</h1>
-        <p class="lead">
-          With over 200,000 members across our Telegram ecosystem, G-Spot offers strong exposure and targeted reach for brands within the lifestyle, wellness, and adult social sectors.
-        </p>
-        <p class="lead">
-          We believe in long-term collaborations that bring value both to our partners and to our members.
-        </p>
-        <div class="cta-row">
-          <a class="btn primary" href="https://t.me/gspot_adminbot" target="_blank" rel="noreferrer">Start a Partnership</a>
-          <a class="btn ghost" href="about.html">Learn About Us</a>
-        </div>
-      </div>
-      <div class="hero-card" aria-hidden="true">
-        <div class="shine"></div>
-        <div class="card-content">
-          <div class="stat">Targeted<span>Brand Reach</span></div>
-          <div class="stat">Sponsored<span>Promotions</span></div>
-          <div class="stat">Event<span>Partnerships</span></div>
-          <div class="stat">Community<span>Campaigns</span></div>
-        </div>
-      </div>
-    </section>
+    <div class="content">
+      <header class="top-rail">
+        <span class="badge">Partners</span>
+        <p>Brand collaborations and campaigns.</p>
+        <button class="nav-toggle" aria-label="Open menu">
+          <span></span><span></span><span></span>
+        </button>
+      </header>
 
-    <section class="section">
-      <div class="section-head">
-        <h2>Open To Collaboration</h2>
-        <p>We are open to brand collaborations that elevate the community experience.</p>
-      </div>
-      <div class="card-grid">
-        <article class="info-card">
-          <h3>Brand collaborations</h3>
-          <p>Align your brand with a large, engaged lifestyle audience.</p>
-        </article>
-        <article class="info-card">
-          <h3>Sponsored promotions</h3>
-          <p>Highlight products and services with dedicated community visibility.</p>
-        </article>
-        <article class="info-card">
-          <h3>Product features</h3>
-          <p>Showcase offerings with curated posts and focused engagement.</p>
-        </article>
-        <article class="info-card">
-          <h3>Event venue partnerships</h3>
-          <p>Host and elevate exclusive gatherings with G-Spot.</p>
-        </article>
-      </div>
-    </section>
+      <main>
+        <section class="hero split">
+          <div class="hero-text">
+            <p class="eyebrow">Partner With G-Spot</p>
+            <h1>Partnerships & Contact</h1>
+            <p class="lead">
+              With over 200,000 members across our Telegram ecosystem, G-Spot offers strong exposure and targeted reach for brands within the lifestyle, wellness, and adult social sectors.
+            </p>
+            <p class="lead">
+              We believe in long-term collaborations that bring value both to our partners and to our members.
+            </p>
+            <div class="cta-row">
+              <a class="btn primary" href="https://t.me/gspot_adminbot" target="_blank" rel="noreferrer">Start a Partnership</a>
+              <a class="btn ghost" href="about.html">Learn About Us</a>
+            </div>
+          </div>
+          <div class="hero-media">
+            <img src="assets/partners-1.jpg" alt="Portrait of an Asian man in a bold fashion look" loading="lazy" />
+            <div class="hero-overlay">
+              <div class="stat">Targeted<span>Brand Reach</span></div>
+              <div class="stat">Sponsored<span>Promotions</span></div>
+            </div>
+          </div>
+        </section>
 
-    <section class="section dark-panel">
-      <div class="section-head">
-        <h2>Our Partnered Brands</h2>
-        <p>We proudly collaborate with brands that support our community lifestyle.</p>
-      </div>
-      <div class="partner-grid">
-        <div class="partner">Pinoy Poppers</div>
-        <div class="partner">Delulubes</div>
-        <div class="partner">Browax Waxing Solutions</div>
-        <div class="partner">D’mansion Bathouse</div>
-        <div class="partner">Delulubes</div>
-      </div>
-    </section>
+        <section class="section">
+          <div class="section-head">
+            <h2>Open To Collaboration</h2>
+            <p>We are open to brand collaborations that elevate the community experience.</p>
+          </div>
+          <div class="card-grid">
+            <article class="info-card">
+              <h3>Brand collaborations</h3>
+              <p>Align your brand with a large, engaged lifestyle audience.</p>
+            </article>
+            <article class="info-card">
+              <h3>Sponsored promotions</h3>
+              <p>Highlight products and services with dedicated community visibility.</p>
+            </article>
+            <article class="info-card">
+              <h3>Product features</h3>
+              <p>Showcase offerings with curated posts and focused engagement.</p>
+            </article>
+            <article class="info-card">
+              <h3>Event venue partnerships</h3>
+              <p>Host and elevate exclusive gatherings with G-Spot.</p>
+            </article>
+          </div>
+        </section>
 
-    <section class="section">
-      <div class="section-head">
-        <h2>Promotion Opportunities</h2>
-        <p>Brands and business owners can leverage our ecosystem in multiple ways.</p>
-      </div>
-      <div class="card-grid">
-        <article class="info-card">
-          <h3>Multi-group broadcast reach</h3>
-          <p>Activate multiple groups to expand your campaign visibility.</p>
-        </article>
-        <article class="info-card">
-          <h3>Featured posts</h3>
-          <p>Dedicated spotlight posts that drive interest and engagement.</p>
-        </article>
-        <article class="info-card">
-          <h3>Event sponsorship placements</h3>
-          <p>On-site brand touchpoints within exclusive community events.</p>
-        </article>
-        <article class="info-card">
-          <h3>Dedicated promotional announcements</h3>
-          <p>Strategic announcements tailored to the community’s interests.</p>
-        </article>
-      </div>
-    </section>
+        <section class="section dark-panel">
+          <div class="section-head">
+            <h2>Our Partnered Brands</h2>
+            <p>We proudly collaborate with brands that support our community lifestyle.</p>
+          </div>
+          <div class="partner-grid">
+            <div class="partner">Pinoy Poppers</div>
+            <div class="partner">Delulubes</div>
+            <div class="partner">Browax Waxing Solutions</div>
+            <div class="partner">D’mansion Bathouse</div>
+            <div class="partner">Delulubes</div>
+          </div>
+        </section>
 
-    <section class="section cta-section">
-      <div>
-        <h2>Contact Information</h2>
-        <p>For partnerships, sponsorships, or general inquiries.</p>
-      </div>
-      <a class="btn primary" href="https://t.me/gspot_adminbot" target="_blank" rel="noreferrer">Telegram Admin</a>
-    </section>
-  </main>
+        <section class="section">
+          <div class="section-head">
+            <h2>Promotion Opportunities</h2>
+            <p>Brands and business owners can leverage our ecosystem in multiple ways.</p>
+          </div>
+          <div class="card-grid">
+            <article class="info-card">
+              <h3>Multi-group broadcast reach</h3>
+              <p>Activate multiple groups to expand your campaign visibility.</p>
+            </article>
+            <article class="info-card">
+              <h3>Featured posts</h3>
+              <p>Dedicated spotlight posts that drive interest and engagement.</p>
+            </article>
+            <article class="info-card">
+              <h3>Event sponsorship placements</h3>
+              <p>On-site brand touchpoints within exclusive community events.</p>
+            </article>
+            <article class="info-card">
+              <h3>Dedicated promotional announcements</h3>
+              <p>Strategic announcements tailored to the community’s interests.</p>
+            </article>
+          </div>
+        </section>
 
-  <footer class="footer">
-    <p>G-Spot — Partnerships that amplify community.</p>
-    <p class="credit">Built by <a href="https://jcitservices-ai.github.io/itservices/index.html" target="_blank" rel="noreferrer">JC IT SERVICES</a>.</p>
-  </footer>
+        <section class="section cta-section">
+          <div>
+            <h2>Contact Information</h2>
+            <p>For partnerships, sponsorships, or general inquiries.</p>
+          </div>
+          <a class="btn primary" href="https://t.me/gspot_adminbot" target="_blank" rel="noreferrer">Telegram Admin</a>
+        </section>
+      </main>
+
+      <footer class="footer">
+        <p>G-Spot — Partnerships that amplify community.</p>
+        <p class="credit">Built by <a href="https://jcitservices-ai.github.io/itservices/index.html" target="_blank" rel="noreferrer">JC IT SERVICES</a>.</p>
+      </footer>
+    </div>
+  </div>
 
   <script src="script.js"></script>
 </body>
