Add partner logos and update branding

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
   <div class="layout">
     <aside class="sidebar">
       <div class="brand">
-        <img class="brand-logo" src="assets/gspot-logo.png" alt="G-Spot logo" />
+        <img class="brand-logo" src="assets/gspotlogo.jpg" alt="G-Spot logo" />
         <span class="brand-text">G-Spot</span>
       </div>
       <nav class="side-nav">
@@ -49,7 +49,7 @@
             <p class="lead">We specialize in facilitating adult social activities and gatherings while maintaining structure, discretion, and responsible coordination.</p>
           </div>
           <div class="hero-media">
-            <img src="assets/about-1.jpg" alt="Two Asian men enjoying a night out" loading="lazy" />
+            <img src="assets/about-1.jpg" alt="Asian man in a nightlife setting" loading="lazy" />
             <div class="hero-overlay">
               <div class="stat">Structured<span>Community Guidelines</span></div>
               <div class="stat">Engaged<span>Nationwide Members</span></div>
@@ -119,6 +119,14 @@
         <p class="credit">Built by <a href="https://jcitservices-ai.github.io/itservices/index.html" target="_blank" rel="noreferrer">JC IT SERVICES</a>.</p>
       </footer>
     </div>
+  </div>
+
+  <div class="promo-banner" role="dialog" aria-live="polite">
+    <div class="promo-content">
+      <p>Want your own website or Telegram bot? Contact JC IT SERVICES.</p>
+      <a class="btn primary" href="https://jcitservices-ai.github.io/itservices/index.html" target="_blank" rel="noreferrer">Get Started</a>
+    </div>
+    <button class="promo-close" aria-label="Close banner">×</button>
   </div>
 
   <script src="script.js"></script>
