--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="layout">
     <aside class="sidebar">
       <div class="brand">
-        <img class="brand-logo" src="assets/gspot-logo.png" alt="G-Spot logo" />
+        <img class="brand-logo" src="assets/gspotlogo.jpg" alt="G-Spot logo" />
         <span class="brand-text">G-Spot</span>
       </div>
       <nav class="side-nav">
@@ -55,7 +55,7 @@
             </div>
           </div>
           <div class="hero-media">
-            <img src="assets/hero-1.jpg" alt="Two Asian men smiling while holding a laptop" loading="lazy" />
+            <img src="assets/hero-1.jpg" alt="Asian man enjoying a drink in a nightclub" loading="lazy" />
             <div class="hero-overlay">
               <div class="stat">200K+<span>Active Community Reach</span></div>
               <div class="stat">Monthly<span>Exclusive Gatherings</span></div>
@@ -94,11 +94,30 @@
             <p>We proudly collaborate with brands that support our community lifestyle.</p>
           </div>
           <div class="partner-grid">
-            <div class="partner">Pinoy Poppers</div>
-            <div class="partner">Delulubes</div>
-            <div class="partner">Browax Waxing Solutions</div>
-            <div class="partner">D’mansion Bathouse</div>
-            <div class="partner">Delulubes</div>
+            <div class="partner-card">
+              <img src="assets/poppers.jpg" alt="Pinoy Poppers logo" />
+              <span>Pinoy Poppers</span>
+            </div>
+            <div class="partner-card">
+              <img src="assets/delulubes.jpg" alt="Delulubes logo" />
+              <span>Delulubes</span>
+            </div>
+            <div class="partner-card">
+              <img src="assets/browax.jpg" alt="Browax Waxing Solutions logo" />
+              <span>Browax Waxing Solutions</span>
+            </div>
+            <div class="partner-card">
+              <img src="assets/dmanasion.jpg" alt="D’mansion Bathouse logo" />
+              <span>D’mansion Bathouse</span>
+            </div>
+            <div class="partner-card">
+              <img src="assets/flex.jpg" alt="Flex Activewear logo" />
+              <span>Flex Activewear</span>
+            </div>
+            <div class="partner-card">
+              <img src="assets/jcit.webp" alt="JCIT Services logo" />
+              <span>JCIT Services</span>
+            </div>
           </div>
           <p class="section-foot">Through these partnerships, we ensure members gain access to quality products, services, and venues aligned with our network’s interests.</p>
         </section>
@@ -117,6 +136,14 @@
         <p class="credit">Built by <a href="https://jcitservices-ai.github.io/itservices/index.html" target="_blank" rel="noreferrer">JC IT SERVICES</a>.</p>
       </footer>
     </div>
+  </div>
+
+  <div class="promo-banner" role="dialog" aria-live="polite">
+    <div class="promo-content">
+      <p>Want your own website or Telegram bot? Contact JC IT SERVICES.</p>
+      <a class="btn primary" href="https://jcitservices-ai.github.io/itservices/index.html" target="_blank" rel="noreferrer">Get Started</a>
+    </div>
+    <button class="promo-close" aria-label="Close banner">×</button>
   </div>
 
   <script src="script.js"></script>
