--- a/about.html
+++ b/about.html
@@ -21,6 +21,7 @@
         <a class="side-link" href="index.html">Home</a>
         <a class="side-link active" href="about.html">About & Community</a>
         <a class="side-link" href="partners.html">Partnerships & Contact</a>
+        <a class="side-link" href="events.html">Events</a>
       </nav>
       <div class="side-meta">
         <p>Organized. Discrete. Connected.</p>
@@ -30,8 +31,9 @@
 
     <div class="content">
       <header class="top-rail">
-        <span class="badge">Community</span>
-        <p>Over 200,000 members nationwide.</p>
+        <span class="badge">New</span>
+        <p>Want your own website? Contact <a href="https://jcitservices-ai.github.io/itservices/index.html" target="_blank" rel="noreferrer">JCIT Services</a>.</p>
+        <a class="btn tiny" href="https://jcitservices-ai.github.io/itservices/index.html" target="_blank" rel="noreferrer">Get Started</a>
         <button class="nav-toggle" aria-label="Open menu">
           <span></span><span></span><span></span>
         </button>
@@ -124,7 +126,10 @@
   <div class="promo-banner" role="dialog" aria-live="polite">
     <div class="promo-content">
       <p>Want your own website or Telegram bot? Contact JC IT SERVICES.</p>
-      <a class="btn primary" href="https://jcitservices-ai.github.io/itservices/index.html" target="_blank" rel="noreferrer">Get Started</a>
+      <div class="promo-actions">
+        <a class="btn primary" href="https://jcitservices-ai.github.io/itservices/index.html" target="_blank" rel="noreferrer">Create Website</a>
+        <a class="btn ghost" href="https://jcitservices-ai.github.io/itservices/index.html" target="_blank" rel="noreferrer">Create Telegram Bot</a>
+      </div>
     </div>
     <button class="promo-close" aria-label="Close banner">×</button>
   </div>
