Finalize site updates

--- a/about.html
+++ b/about.html
@@ -15,7 +15,6 @@
     <aside class="sidebar">
       <div class="brand">
         <img class="brand-logo" src="assets/gspotlogo.jpg" alt="G-Spot logo" />
-        <span class="brand-text">G-Spot</span>
       </div>
       <nav class="side-nav">
         <a class="side-link" href="index.html">Home</a>
@@ -46,9 +45,12 @@
             <h1>About & Community</h1>
             <p class="lead">
               Founded as a Telegram-based alter community, G-Spot has grown into a multi-channel ecosystem connecting over 200,000 members nationwide.
-              Our mission is to provide an organized and active platform for adults seeking community-driven social experiences.
+              Our mission is to provide an organized, active platform for adults seeking community-driven social experiences.
             </p>
-            <p class="lead">We specialize in facilitating adult social activities and gatherings while maintaining structure, discretion, and responsible coordination.</p>
+            <p class="lead">
+              We specialize in facilitating adult social activities and gatherings while maintaining structure, discretion, and responsible coordination
+              across every channel and event.
+            </p>
           </div>
           <div class="hero-media">
             <img src="assets/about-1.jpg" alt="Asian man in a nightlife setting" loading="lazy" />
@@ -62,24 +64,24 @@
         <section class="section">
           <div class="section-head">
             <h2>Our Community Structure</h2>
-            <p>G-Spot operates through multiple channels to keep everything organized, clear, and responsive.</p>
+            <p>G-Spot operates through multiple channels to keep everything organized, clear, and responsive for members and partners.</p>
           </div>
           <div class="card-grid">
             <article class="info-card">
               <h3>Main Telegram groups</h3>
-              <p>Our primary community spaces for active engagement and announcements.</p>
+              <p>Primary community spaces for conversation, announcements, and daily engagement.</p>
             </article>
             <article class="info-card">
               <h3>Associate channels</h3>
-              <p>Targeted channels for updates, promotions, and curated content.</p>
+              <p>Targeted channels for updates, promotions, and curated content with clear moderation.</p>
             </article>
             <article class="info-card">
               <h3>Event-based subgroups</h3>
-              <p>Smaller communities for event coordination and participation.</p>
+              <p>Smaller communities for event coordination, RSVPs, and participant updates.</p>
             </article>
             <article class="info-card">
               <h3>Partner brand integrations</h3>
-              <p>Collaborations that extend value to members and partners alike.</p>
+              <p>Collaborations that extend value to members and partners through trusted offers.</p>
             </article>
           </div>
           <p class="section-foot">Our admins ensure that community guidelines are followed and that interactions remain organized and respectful.</p>
@@ -132,6 +134,29 @@
       </div>
     </div>
     <button class="promo-close" aria-label="Close banner">×</button>
+  </div>
+  <div class="float-stack">
+    <div class="event-float" role="dialog" aria-live="polite">
+    <video class="event-float-video" poster="assets/poster.jpg" autoplay loop playsinline>
+      <source src="assets/video.mov" type="video/quicktime" />
+      <source src="assets/video.mov" type="video/mp4" />
+    </video>
+    <div class="event-float-body">
+      <span class="event-tag">Upcoming Event</span>
+      <p class="event-title">VALENTINO — Feb 21, 2026 • Pansol, Laguna</p>
+      <p class="event-sub">A night where Darkroom Secrets find their G-Spot.</p>
+      <a class="btn primary" href="https://t.me/VALENTINOregbot" target="_blank" rel="noreferrer">Register</a>
+    </div>
+    <button class="event-float-close" aria-label="Close event banner">×</button>
+  </div>
+    <div class="ad-float" role="dialog" aria-live="polite">
+    <div class="ad-body">
+      <span class="event-tag">Delulubes</span>
+      <p class="ad-title">Craving for fun? Treat yourself... you deserve it.</p>
+      <a class="btn primary" href="https://t.me/Delulubesbot" target="_blank" rel="noreferrer">Order Now</a>
+    </div>
+    <button class="ad-close" aria-label="Close ad">×</button>
+  </div>
   </div>
 
   <script src="script.js"></script>
