--- a/events.html
+++ b/events.html
@@ -15,7 +15,6 @@
     <aside class="sidebar">
       <div class="brand">
         <img class="brand-logo" src="assets/gspotlogo.jpg" alt="G-Spot logo" />
-        <span class="brand-text">G-Spot</span>
       </div>
       <nav class="side-nav">
         <a class="side-link" href="index.html">Home</a>
@@ -44,21 +43,25 @@
           <div class="hero-text">
             <p class="eyebrow">Upcoming Event</p>
             <h1>VALENTINO</h1>
-            <p class="lead">A night where Darkroom Secrets find their G-Spot.</p>
+            <p class="lead">A night where Darkroom Secrets find their G-Spot — an immersive overnight experience built for bold energy and connection.</p>
             <div class="event-meta">
             <div class="event-chip">Feb 21, 2026</div>
               <div class="event-chip">Pansol, Laguna</div>
               <div class="event-chip">Overnight experience</div>
             </div>
-            <p class="lead">Unli drinks, food, all-night party, darkroom areas (Sex Room), drag &amp; macho shows.</p>
-            <p class="lead">Pre-book 1,000 | Walk-in 1,500</p>
+            <p class="lead">Unli drinks, food, all-night party, darkroom areas (Sex Room), drag &amp; macho shows — a curated mix of performance and play.</p>
+            <p class="lead">Pre-book 1,000 | Walk-in 1,500 — limited slots, secure yours early.</p>
             <div class="cta-row">
               <a class="btn primary" href="https://t.me/VALENTINOregbot" target="_blank" rel="noreferrer">Register Here</a>
               <a class="btn ghost" href="https://t.me/VALENTINOregbot" target="_blank" rel="noreferrer">DM @VALENTINOregbot</a>
             </div>
           </div>
           <div class="hero-media">
-            <img src="assets/hero-1.jpg" alt="Nightlife party scene" loading="lazy" />
+            <video class="event-video" poster="assets/poster.jpg" autoplay loop playsinline>
+              <source src="assets/video.mov" type="video/quicktime" />
+              <source src="assets/video.mov" type="video/mp4" />
+              Your browser does not support the video tag.
+            </video>
             <div class="hero-overlay">
               <div class="stat">Night<span>Darkroom Secrets</span></div>
               <div class="stat">Party<span>All-night energy</span></div>
@@ -116,6 +119,29 @@
       </div>
     </div>
     <button class="promo-close" aria-label="Close banner">×</button>
+  </div>
+  <div class="float-stack">
+    <div class="event-float" role="dialog" aria-live="polite">
+    <video class="event-float-video" poster="assets/poster.jpg" autoplay loop playsinline>
+      <source src="assets/video.mov" type="video/quicktime" />
+      <source src="assets/video.mov" type="video/mp4" />
+    </video>
+    <div class="event-float-body">
+      <span class="event-tag">Upcoming Event</span>
+      <p class="event-title">VALENTINO — Feb 21, 2026 • Pansol, Laguna</p>
+      <p class="event-sub">A night where Darkroom Secrets find their G-Spot.</p>
+      <a class="btn primary" href="https://t.me/VALENTINOregbot" target="_blank" rel="noreferrer">Register</a>
+    </div>
+    <button class="event-float-close" aria-label="Close event banner">×</button>
+  </div>
+    <div class="ad-float" role="dialog" aria-live="polite">
+    <div class="ad-body">
+      <span class="event-tag">Delulubes</span>
+      <p class="ad-title">Craving for fun? Treat yourself... you deserve it.</p>
+      <a class="btn primary" href="https://t.me/Delulubesbot" target="_blank" rel="noreferrer">Order Now</a>
+    </div>
+    <button class="ad-close" aria-label="Close ad">×</button>
+  </div>
   </div>
 
   <script src="script.js"></script>
