--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <aside class="sidebar">
       <div class="brand">
         <img class="brand-logo" src="assets/gspotlogo.jpg" alt="G-Spot logo" />
-        <span class="brand-text">G-Spot</span>
       </div>
       <nav class="side-nav">
         <a class="side-link active" href="index.html">Home</a>
@@ -45,11 +44,12 @@
             <p class="eyebrow">The Largest Alter Community on Telegram</p>
             <h1>G-Spot</h1>
             <p class="lead">
-              G-Spot is a fast-growing Telegram-based community with over 200,000 members across our groups and channel associates.
-              We are a dynamic adult social platform built around connection, lifestyle experiences, and curated gatherings for like-minded individuals.
+              G-Spot is a fast-growing Telegram community with more than 200,000 members across our groups and channel associates.
+              We are an adult social platform built around connection, curated lifestyle experiences, and organized gatherings for like-minded individuals.
             </p>
             <p class="lead">
-              We create spaces where members can interact, network, and participate in organized monthly events within a structured and well-managed environment.
+              Our ecosystem is designed for structure and engagement: clear channels, responsible coordination, and a steady rhythm of monthly events
+              that keep the community active, connected, and evolving.
             </p>
             <div class="cta-row">
               <a class="btn primary" href="https://t.me/gspot_adminbot" target="_blank" rel="noreferrer">Join on Telegram</a>
@@ -68,24 +68,24 @@
         <section class="section">
           <div class="section-head">
             <h2>Why G-Spot?</h2>
-            <p>G-Spot is more than a group. It is a connected community built on shared interests and organized engagement.</p>
+            <p>G-Spot is more than a group. It is a connected community built on shared interests, curated experiences, and consistent engagement.</p>
           </div>
           <div class="card-grid">
             <article class="info-card">
               <h3>200K+ active community reach</h3>
-              <p>Our Telegram ecosystem connects a massive, engaged audience across curated groups and channels.</p>
+              <p>Our Telegram ecosystem connects a massive, engaged audience across curated groups and channels, giving partners real visibility.</p>
             </article>
             <article class="info-card">
               <h3>Established Telegram network ecosystem</h3>
-              <p>Reliable structure for announcements, events, and partner integrations.</p>
+              <p>Reliable structure for announcements, event coordination, and partner integrations that stay on-brand and on-message.</p>
             </article>
             <article class="info-card">
               <h3>Monthly exclusive gatherings</h3>
-              <p>Consistent, well-managed events that keep the community active and connected.</p>
+              <p>Consistent, well-managed events that give members a reason to return and connect in person.</p>
             </article>
             <article class="info-card">
               <h3>Trusted partner brands</h3>
-              <p>Collaborations that deliver value, visibility, and lifestyle alignment.</p>
+              <p>Collaborations that deliver real value, targeted exposure, and lifestyle alignment for our community.</p>
             </article>
           </div>
         </section>
@@ -149,6 +149,29 @@
       </div>
     </div>
     <button class="promo-close" aria-label="Close banner">×</button>
+  </div>
+  <div class="float-stack">
+    <div class="event-float" role="dialog" aria-live="polite">
+    <video class="event-float-video" poster="assets/poster.jpg" autoplay loop playsinline>
+      <source src="assets/video.mov" type="video/quicktime" />
+      <source src="assets/video.mov" type="video/mp4" />
+    </video>
+    <div class="event-float-body">
+      <span class="event-tag">Upcoming Event</span>
+      <p class="event-title">VALENTINO — Feb 21, 2026 • Pansol, Laguna</p>
+      <p class="event-sub">A night where Darkroom Secrets find their G-Spot.</p>
+      <a class="btn primary" href="https://t.me/VALENTINOregbot" target="_blank" rel="noreferrer">Register</a>
+    </div>
+    <button class="event-float-close" aria-label="Close event banner">×</button>
+  </div>
+    <div class="ad-float" role="dialog" aria-live="polite">
+    <div class="ad-body">
+      <span class="event-tag">Delulubes</span>
+      <p class="ad-title">Craving for fun? Treat yourself... you deserve it.</p>
+      <a class="btn primary" href="https://t.me/Delulubesbot" target="_blank" rel="noreferrer">Order Now</a>
+    </div>
+    <button class="ad-close" aria-label="Close ad">×</button>
+  </div>
   </div>
 
   <script src="script.js"></script>
