--- a/partners.html
+++ b/partners.html
@@ -15,7 +15,6 @@
     <aside class="sidebar">
       <div class="brand">
         <img class="brand-logo" src="assets/gspotlogo.jpg" alt="G-Spot logo" />
-        <span class="brand-text">G-Spot</span>
       </div>
       <nav class="side-nav">
         <a class="side-link" href="index.html">Home</a>
@@ -45,10 +44,11 @@
             <p class="eyebrow">Partner With G-Spot</p>
             <h1>Partnerships & Contact</h1>
             <p class="lead">
-              With over 200,000 members across our Telegram ecosystem, G-Spot offers strong exposure and targeted reach for brands within the lifestyle, wellness, and adult social sectors.
+              With over 200,000 members across our Telegram ecosystem, G-Spot offers strong exposure and targeted reach for brands within the lifestyle,
+              wellness, and adult social sectors.
             </p>
             <p class="lead">
-              We believe in long-term collaborations that bring value both to our partners and to our members.
+              We prioritize long-term collaborations that bring value to both our partners and our members through curated campaigns and trusted visibility.
             </p>
             <div class="cta-row">
               <a class="btn primary" href="https://t.me/gspot_adminbot" target="_blank" rel="noreferrer">Start a Partnership</a>
@@ -67,24 +67,24 @@
         <section class="section">
           <div class="section-head">
             <h2>Open To Collaboration</h2>
-            <p>We are open to brand collaborations that elevate the community experience.</p>
+            <p>We collaborate with brands that elevate the community experience through quality, alignment, and real engagement.</p>
           </div>
           <div class="card-grid">
             <article class="info-card">
               <h3>Brand collaborations</h3>
-              <p>Align your brand with a large, engaged lifestyle audience.</p>
+              <p>Align your brand with a large, engaged lifestyle audience that values curated experiences.</p>
             </article>
             <article class="info-card">
               <h3>Sponsored promotions</h3>
-              <p>Highlight products and services with dedicated community visibility.</p>
+              <p>Highlight products and services with dedicated visibility and community-trusted placement.</p>
             </article>
             <article class="info-card">
               <h3>Product features</h3>
-              <p>Showcase offerings with curated posts and focused engagement.</p>
+              <p>Showcase offerings with curated posts, targeted placement, and focused engagement.</p>
             </article>
             <article class="info-card">
               <h3>Event venue partnerships</h3>
-              <p>Host and elevate exclusive gatherings with G-Spot.</p>
+              <p>Host and elevate exclusive gatherings with a structured, high-energy community.</p>
             </article>
           </div>
         </section>
@@ -172,6 +172,29 @@
       </div>
     </div>
     <button class="promo-close" aria-label="Close banner">×</button>
+  </div>
+  <div class="float-stack">
+    <div class="event-float" role="dialog" aria-live="polite">
+    <video class="event-float-video" poster="assets/poster.jpg" autoplay loop playsinline>
+      <source src="assets/video.mov" type="video/quicktime" />
+      <source src="assets/video.mov" type="video/mp4" />
+    </video>
+    <div class="event-float-body">
+      <span class="event-tag">Upcoming Event</span>
+      <p class="event-title">VALENTINO — Feb 21, 2026 • Pansol, Laguna</p>
+      <p class="event-sub">A night where Darkroom Secrets find their G-Spot.</p>
+      <a class="btn primary" href="https://t.me/VALENTINOregbot" target="_blank" rel="noreferrer">Register</a>
+    </div>
+    <button class="event-float-close" aria-label="Close event banner">×</button>
+  </div>
+    <div class="ad-float" role="dialog" aria-live="polite">
+    <div class="ad-body">
+      <span class="event-tag">Delulubes</span>
+      <p class="ad-title">Craving for fun? Treat yourself... you deserve it.</p>
+      <a class="btn primary" href="https://t.me/Delulubesbot" target="_blank" rel="noreferrer">Order Now</a>
+    </div>
+    <button class="ad-close" aria-label="Close ad">×</button>
+  </div>
   </div>
 
   <script src="script.js"></script>
