Add website builder page and animated background

--- a/events.html
+++ b/events.html
@@ -21,6 +21,7 @@
         <a class="side-link" href="about.html">About & Community</a>
         <a class="side-link" href="partners.html">Partnerships & Contact</a>
         <a class="side-link active" href="events.html">Events</a>
+        <a class="side-link" href="builder.html">Website Builder</a>
       </nav>
       <div class="side-meta">
         <p>Exclusive monthly gatherings.</p>
@@ -134,16 +135,20 @@
     </div>
     <button class="event-float-close" aria-label="Close event banner">×</button>
   </div>
-    <div class="ad-float" role="dialog" aria-live="polite">
+  <div class="ad-float" role="dialog" aria-live="polite">
     <div class="ad-body">
       <span class="event-tag">Delulubes</span>
       <p class="ad-title">Craving for fun? Treat yourself... you deserve it.</p>
       <a class="btn primary" href="https://t.me/Delulubesbot" target="_blank" rel="noreferrer">Order Now</a>
     </div>
-    <button class="ad-close" aria-label="Close ad">×</button>
+    <div class="close-wrap">
+      <span class="close-label">Close this ad</span>
+      <button class="ad-close" aria-label="Close ad">×</button>
+    </div>
   </div>
   </div>
 
   <script src="script.js"></script>
+  <script src="background.js"></script>
 </body>
 </html>
